// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AnswerAreaDiff renders an answer area in the diff view 1`] = `
<div>
  <div
    class="diff-header"
  >
    Answer Area
  </div>
  <div
    class="diff-header"
  >
    Answer Area
  </div>
  <div
    class="diff-body ui-helper-clearfix"
  >
    <div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="removed diff-row before"
          >
            <div
              style="padding-left: 0px;"
            >
              calculator: 
              <span
                class="inner-value dark removed"
              >
                false
              </span>
            </div>
          </div>
          <div
            class="added diff-row after"
          >
            <div
              style="padding-left: 0px;"
            >
              calculator: 
              <span
                class="inner-value dark added"
              >
                true
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="removed diff-row before"
          >
            <div
              style="padding-left: 0px;"
            >
              financialCalculatorTotalAmount: 
              <span
                class="inner-value dark removed"
              >
                false
              </span>
            </div>
          </div>
          <div
            class="added diff-row after"
          >
            <div
              style="padding-left: 0px;"
            >
              financialCalculatorTotalAmount: 
              <span
                class="inner-value dark added"
              >
                true
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="removed diff-row before"
          >
            <div
              style="padding-left: 0px;"
            >
              periodicTable: 
              <span
                class="inner-value dark removed"
              >
                false
              </span>
            </div>
          </div>
          <div
            class="added diff-row after"
          >
            <div
              style="padding-left: 0px;"
            >
              periodicTable: 
              <span
                class="inner-value dark added"
              >
                true
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="removed diff-row before"
          >
            <div
              style="padding-left: 0px;"
            >
              periodicTableWithKey: 
              <span
                class="inner-value dark removed"
              >
                false
              </span>
            </div>
          </div>
          <div
            class="added diff-row after"
          >
            <div
              style="padding-left: 0px;"
            >
              periodicTableWithKey: 
              <span
                class="inner-value dark added"
              >
                true
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        style="clear: both;"
      >
        <div
          class="diff-row collapsed before"
        >
          <div
            style="padding-left: 0px;"
          >
            <button
              aria-disabled="false"
              class="button_vr44p2-o_O-reset_1ck4g21-o_O-shared_1jpsfmg-o_O-default_1qlmkty-o_O-small_tjsyec"
              data-kind="secondary"
              type="button"
            >
              <span
                class="text_f1191h-o_O-BodyText_1xtvlx3-o_O-BodyTextSmallMediumWeight_1qmn0hf-o_O-text_1kowsup-o_O-smallText_v9nlfb"
              >
                show unmodified
              </span>
            </button>
          </div>
        </div>
        <div
          class="diff-row collapsed after"
        >
          <div
            style="padding-left: 0px;"
          >
            <button
              aria-disabled="false"
              class="button_vr44p2-o_O-reset_1ck4g21-o_O-shared_1jpsfmg-o_O-default_1qlmkty-o_O-small_tjsyec"
              data-kind="secondary"
              type="button"
            >
              <span
                class="text_f1191h-o_O-BodyText_1xtvlx3-o_O-BodyTextSmallMediumWeight_1qmn0hf-o_O-text_1kowsup-o_O-smallText_v9nlfb"
              >
                show unmodified
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AnswerAreaDiff renders with both 'before' and 'after' undefined 1`] = `
<div>
  <div
    class="diff-header"
  >
    Answer Area
  </div>
  <div
    class="diff-header"
  >
    Answer Area
  </div>
  <div
    class="diff-body ui-helper-clearfix"
  >
    <div />
  </div>
</div>
`;

exports[`AnswerAreaDiff renders with missing 'after' props 1`] = `
<div>
  <div
    class="diff-header"
  >
    Answer Area
  </div>
  <div
    class="diff-header"
  >
    Answer Area
  </div>
  <div
    class="diff-body ui-helper-clearfix"
  >
    <div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="removed dark diff-row before"
          >
            <div
              style="padding-left: 0px;"
            >
              calculator: 
              <span
                class="inner-value dark removed dark"
              >
                false
              </span>
            </div>
          </div>
          <div
            class="blank-space diff-row after"
          >
            <div
              style="padding-left: 0px;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="removed dark diff-row before"
          >
            <div
              style="padding-left: 0px;"
            >
              financialCalculatorMonthlyPayment: 
              <span
                class="inner-value dark removed dark"
              >
                false
              </span>
            </div>
          </div>
          <div
            class="blank-space diff-row after"
          >
            <div
              style="padding-left: 0px;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="removed dark diff-row before"
          >
            <div
              style="padding-left: 0px;"
            >
              financialCalculatorTotalAmount: 
              <span
                class="inner-value dark removed dark"
              >
                false
              </span>
            </div>
          </div>
          <div
            class="blank-space diff-row after"
          >
            <div
              style="padding-left: 0px;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="removed dark diff-row before"
          >
            <div
              style="padding-left: 0px;"
            >
              financialCalculatorTimeToPayOff: 
              <span
                class="inner-value dark removed dark"
              >
                false
              </span>
            </div>
          </div>
          <div
            class="blank-space diff-row after"
          >
            <div
              style="padding-left: 0px;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="removed dark diff-row before"
          >
            <div
              style="padding-left: 0px;"
            >
              periodicTable: 
              <span
                class="inner-value dark removed dark"
              >
                false
              </span>
            </div>
          </div>
          <div
            class="blank-space diff-row after"
          >
            <div
              style="padding-left: 0px;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="removed dark diff-row before"
          >
            <div
              style="padding-left: 0px;"
            >
              periodicTableWithKey: 
              <span
                class="inner-value dark removed dark"
              >
                false
              </span>
            </div>
          </div>
          <div
            class="blank-space diff-row after"
          >
            <div
              style="padding-left: 0px;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AnswerAreaDiff renders with missing 'before' props 1`] = `
<div>
  <div
    class="diff-header"
  >
    Answer Area
  </div>
  <div
    class="diff-header"
  >
    Answer Area
  </div>
  <div
    class="diff-body ui-helper-clearfix"
  >
    <div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="blank-space diff-row before"
          >
            <div
              style="padding-left: 0px;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
          <div
            class="added dark diff-row after"
          >
            <div
              style="padding-left: 0px;"
            >
              calculator: 
              <span
                class="inner-value dark added dark"
              >
                true
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="blank-space diff-row before"
          >
            <div
              style="padding-left: 0px;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
          <div
            class="added dark diff-row after"
          >
            <div
              style="padding-left: 0px;"
            >
              financialCalculatorMonthlyPayment: 
              <span
                class="inner-value dark added dark"
              >
                false
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="blank-space diff-row before"
          >
            <div
              style="padding-left: 0px;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
          <div
            class="added dark diff-row after"
          >
            <div
              style="padding-left: 0px;"
            >
              financialCalculatorTotalAmount: 
              <span
                class="inner-value dark added dark"
              >
                true
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="blank-space diff-row before"
          >
            <div
              style="padding-left: 0px;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
          <div
            class="added dark diff-row after"
          >
            <div
              style="padding-left: 0px;"
            >
              financialCalculatorTimeToPayOff: 
              <span
                class="inner-value dark added dark"
              >
                false
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="blank-space diff-row before"
          >
            <div
              style="padding-left: 0px;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
          <div
            class="added dark diff-row after"
          >
            <div
              style="padding-left: 0px;"
            >
              periodicTable: 
              <span
                class="inner-value dark added dark"
              >
                true
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="blank-space diff-row before"
          >
            <div
              style="padding-left: 0px;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
          <div
            class="added dark diff-row after"
          >
            <div
              style="padding-left: 0px;"
            >
              periodicTableWithKey: 
              <span
                class="inner-value dark added dark"
              >
                true
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
